changed it to work in ie again

--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -5,39 +5,33 @@
         <ul>
 
           <li>
-            <button type="button" class="btn no-background remove-padding shadow-radial">
+            <input type="button" class="btn no-background remove-padding shadow-radial">
               <a href="<%= root_path %>" class="black-href"><p class="font-large">Home</p></a>
-            </button> 
+            </input>
           </li>
 
           <li>
-            <button type="button" class="btn no-background remove-padding shadow-radial">
+            <input type="button" class="btn no-background remove-padding shadow-radial">
               <a href="<%= new_rsvp_path %>" class="black-href"><p class="font-large">RSVP</p></a>
-            </button> 
+            </input>
           </li>
 
           <li>
-            <button type="button" class="btn no-background remove-padding shadow-radial">
+            <input type="button" class="btn no-background remove-padding shadow-radial">
               <a href="<%= registry_path %>" class="black-href"><p class="font-large">Registry</p></a>
-            </button> 
+            </input>
           </li>
 
-          <!-- <li>
-            <button type="button" class="btn no-background remove-padding shadow-radial">
-              <a href="<%= contact_path %>" class="black-href"><p class="font-large">Contact</p></a>
-            </button> 
-          </li> -->
-
           <li>
-            <button type="button" class="btn no-background remove-padding shadow-radial">
+            <input type="button" class="btn no-background remove-padding shadow-radial">
               <a href="<%= guestbooks_path %>" class="black-href"><p class="font-large">Guestbook</p></a>
-            </button> 
+            </input>
           </li>
 
           <li>
-            <button type="button" class="btn no-background remove-padding shadow-radial">
+            <input type="button" class="btn no-background remove-padding shadow-radial">
               <a href="<%= hotels_path %>" class="black-href"><p class="font-large">Hotels</p></a>
-            </button> 
+            </input>
           </li>
 
         </ul>
@@ -53,39 +47,33 @@
     <div class="btn-group btn-group-justified padding-5"> 
 
       <div class="btn-group">
-        <button type="button" class="btn no-background remove-padding shadow-radial">
+        <input type="button" class="btn no-background remove-padding shadow-radial">
           <a href="<%= root_path %>" class="black-href"><p class="font-large">Home</p></a>
-        </button> 
+        </input> 
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn no-background remove-padding shadow-radial">
+        <input type="button" class="btn no-background remove-padding shadow-radial">
           <a href="<%= new_rsvp_path %>" class="black-href"><p class="font-large">RSVP</p></a>
-        </button> 
+        </input> 
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn no-background remove-padding shadow-radial">
+        <input type="button" class="btn no-background remove-padding shadow-radial">
           <a href="<%= registry_path %>" class="black-href"><p class="font-large">Registry</p></a>
-        </button> 
+        </input> 
       </div>
 
-      <!-- <div class="btn-group">
-        <button type="button" class="btn no-background remove-padding shadow-radial">
-          <a href="<%= contact_path %>" class="black-href"><p class="font-large">Contact</p></a>
-        </button> 
-      </div> -->
-
       <div class="btn-group">
-        <button type="button" class="btn no-background remove-padding shadow-radial">
+        <input type="button" class="btn no-background remove-padding shadow-radial">
           <a href="<%= guestbooks_path %>" class="black-href"><p class="font-large">Guestbook</p></a>
-        </button> 
+        </input> 
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn no-background remove-padding shadow-radial">
+        <input type="button" class="btn no-background remove-padding shadow-radial">
           <a href="<%= hotels_path %>" class="black-href"><p class="font-large">Hotels</p></a>
-        </button> 
+        </input> 
       </div>
     </div>
   </nav>
