--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -1,57 +1,39 @@
+<nav class="navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#wedding-bar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/">ZKForever</a>
+  </div>
 
-<nav class="fixed-top hidden-sm hidden-md hidden-lg" id="top-nav-bar">
-  <ul class="top-margin">
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="centeredmenu">
+    <ul class="nav navbar-nav">
+      <li>
+        <a href="<%= root_path %>" class="black-href shadow-radial"><p class="font-large">Home</p></a>
+      </li>
 
-    <li>
-      <a href="<%= root_path %>" class="black-href"><p class="font-large shadow-radial">Home</p></a>
-    </li>
+      <li>
+        <a href="<%= new_rsvp_path %>" class="black-href shadow-radial"><p class="font-large">RSVP</p></a>
+      </li>
 
-    <li>
-      <a href="<%= new_rsvp_path %>" class="black-href"><p class="font-large shadow-radial">RSVP</p></a>
-    </li>
+      <li>
+        <a href="<%= registry_path %>" class="black-href shadow-radial"><p class="font-large">Registry</p></a>
+      </li>
 
-    <li>
-      <a href="<%= registry_path %>" class="black-href"><p class="font-large shadow-radial">Registry</p></a>
-    </li>
+      <li>
+        <a href="<%= guestbooks_path %>" class="black-href shadow-radial"><p class="font-large">Guestbook</p></a>
+      </li>
 
-    <li>
-      <a href="<%= guestbooks_path %>" class="black-href"><p class="font-large shadow-radial">Guestbook</p></a>
-    </li>
-
-    <li>
-      <a href="<%= hotels_path %>" class="black-href"><p class="font-large shadow-radial">Hotels</p></a>
-    </li>
-
-  </ul>  
-    <a class="s-button s-collapse-trigger" href="#"><i class="fa fa-chevron-down fa-2x"></i></a>
-</nav>
-  <!-- *************************** -->
-  <!-- Show this on larger screens -->
-  <!-- *************************** -->
-
-<nav class="hidden-xs" id="top-nav-bar-expanded">
-  
-  <ul class="top-margin">
-
-    <li>
-      <a href="<%= root_path %>" class="black-href shadow-radial center-top-bar">Home</a>
-    </li>
-
-    <li>
-      <a href="<%= new_rsvp_path %>" class="black-href shadow-radial center-top-bar">RSVP</a>
-    </li>
-
-    <li>
-      <a href="<%= registry_path %>" class="black-href shadow-radial center-top-bar">Registry</a>
-    </li>
-
-    <li>
-      <a href="<%= guestbooks_path %>" class="black-href shadow-radial center-top-bar">Guestbook</a>
-    </li>
-
-    <li>
-      <a href="<%= hotels_path %>" class="black-href shadow-radial center-top-bar">Hotels</a>
-    </li>
-
-  </ul>  
+      <li>
+        <a href="<%= hotels_path %>" class="black-href shadow-radial"><p class="font-large">Hotels</p></a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+    </ul>
+  </div>
 </nav>
