removed some extra files and upcase titles

--- a/app/views/guestbooks/index.html.erb
+++ b/app/views/guestbooks/index.html.erb
@@ -3,7 +3,7 @@
 
   	<div class="row" id="title-bar">
   		<div class="col-md-12">
-				<h1 class="center-text">Guestbook</h1>
+				<h1 class="center-text">GUESTBOOK</h1>
   			<div align="right">
 					<p><%= link_to('Admin', manage_guestbooks_path, class: 'black-href') %></p>
 				</div>
