--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1 white-background">
 
-    <h1 class="text-center body-title">Showing all RSVPs</h1>
+    <h1 class="text-center body-title">SHOWING ALL RSVPs</h1>
 
     <% flash.each do |name, msg| -%>
       <%= content_tag :div, msg, class: "#{name} center-text" %>
