--- a/app/views/static_pages/hotels.html.erb
+++ b/app/views/static_pages/hotels.html.erb
@@ -1,7 +1,7 @@
 
 <div id="my-form">
 
-	<h1 class="center-text">Hotels</h1>
+	<h1 class="center-text">HOTELS</h1>
 
 	<p id="hotel-welcome">
 		<b>
