--- a/app/views/guestbooks/manage.html.erb
+++ b/app/views/guestbooks/manage.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-10 col-md-offset-1 white-background">
-		<h1 class="center-text body-title">Managing Guestbook</h1>
+		<h1 class="center-text body-title">MANAGING GUESTBOOK</h1>
 
 		<% if @flagged.count > 0 %>
 			<div id="my-boarder">
