--- a/app/views/rsvps/edit.html.erb
+++ b/app/views/rsvps/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
   <div class="col-md-6 col-md-offset-3" id="my-form">
 
-		<h1 class="center-text">Editing RSVP</h1>
+		<h1 class="center-text">EDITING RSVP</h1>
 
 		<div align="right">
 		  <p><%= link_to('Admin', rsvps_path(order_by: :asc, sort_by: :name, show: :all)) %></p>
