--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
   <div class="col-md-6 col-md-offset-3" id="my-form">
-			<h1 class="text-center ">Registry</h1>
+			<h1 class="text-center ">REGISTRY</h1>
 
 			<p class="center-text">
 				<b>We have registered at the following places and will be having a money dance.</b>
