no more rsvp or guestbook signs

--- a/app/views/guestbooks/_form.html.erb
+++ b/app/views/guestbooks/_form.html.erb
@@ -26,7 +26,7 @@
       </div>
 
       <div class="actions form-group">
-        <%= f.submit 'Leave Message', class: "btn btn-default" %>
+        <%= f.submit 'Leave Message', class: "btn btn-default disabled" %>
       </div>
 
     <% end %>
