--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,16 +8,9 @@
 		<div class="">
 			<%= render 'image_carousel' %>
 		</div>
-		<p class="font-medium"><b>Wedding Location:</b> 30301 Sheeptrail Ct, Tehachapi CA, 93561 - <small><%= link_to('MAP','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank", class: 'map-link') %></small></p>
-		</br></br>
-		<p class="font-medium"><b>Date:</b> August 30, 2014</p>
-		</br></br>
-		<p class="font-medium"><b>Start Time:</b> 6pm</p>
-		</br></br>
-		<p class="font-medium">Please RSVP and sign the digital guestbook!</p>
-		</br></br>
-		<p class="font-medium">If you made an error when filling out the RSVP form, please email zkForever.am@gmail.com</p>
-		</br></br>
+		<p class="font-medium">We want to thank everyone that made this wedding possible. It was a great night had by all.</p>
+		<p class="font-medium">If you enjoyed the music that Zack created for the wedding you can download it below</p>
+		<p class="font-medium"><a href="http://noisetrade.com/zacklacom/zack-and-katies-wedding-music">http://noisetrade.com/zacklacom/zack-and-katies-wedding-music</a></p>
 	</div>
 
 </div>
