--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -50,7 +50,7 @@
 
   <div class="row">
     <div class="col-md-12 form-group center-text">
-      <p><%= f.submit 'RSVP', class: "btn btn-default btn-lg" %></p>
+      <p><%= f.submit 'RSVP', class: "btn btn-default btn-lg disabled" %></p>
     </div>
   </div>
 
