move views to haml and ban all robots

--- a/app/views/flagged_guestbook/flagged_notifier.text.haml
+++ b/app/views/flagged_guestbook/flagged_notifier.text.haml
@@ -1,6 +1,6 @@
 A Message has been flagged in your guestbook.
-===============================================
+\===============================================
 
 This is to let you know that a guestbook entry was deemed inapiraote by others.
 
-Please click <%= manage_guestbooks_url %>f
+Please click #{manage_guestbooks_url}f
