--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -28,3 +28,14 @@ div#my-home-form {
 	width: 140px;
 	height: auto;
 }
+
+#main-hotel-list {
+	padding-bottom: 40px;
+}
+
+.my-images {
+	margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  padding: 10px 10px;
+}
